part2/conf/app2.yaml
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-two-deploy
  labels:
    app: app-two
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app-two   # used to watch Service lifecycle
  template:
    metadata:
      labels:
        app: app-two # must match with matchlabels
    spec:
      containers:
        - name: app-two-container
          image: paulbouwer/hello-kubernetes:1.10
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
---
# Service
apiVersion: v1
kind: Service
metadata:
  name: app-two
spec:
  selector:
    app: app-two     # use by deployment to orchestrate life cycle
  ports:
    - port: 80 #ingress will contact http://appx:80
      targetPort: 8080 # requer is transfered to pod:8080 by service
